// Copyright 2018 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.cloud.automl.v1beta1;

import "google/api/annotations.proto";

option go_package = "google.golang.org/genproto/googleapis/cloud/automl/v1beta1;automl";
option java_multiple_files = true;
option java_package = "com.google.cloud.automl.v1beta1";
option php_namespace = "Google\\Cloud\\AutoMl\\V1beta1";


// Input configuration.
message InputConfig {
  // Required. The source of the input.
  oneof source {
    // The GCS location for the input content.
    GcsSource gcs_source = 1;
  }
}

// Output configuration.
message OutputConfig {
  // Required. The destination of the output.
  oneof destination {
    // The GCS location where the output must be written to.
    GcsDestination gcs_destination = 1;
  }
}

// The GCS location for the input content.
message GcsSource {
  // Required. Google Cloud Storage URIs to input files, up to 2000 characters
  // long. Accepted forms:
  // * Full object path: gs://bucket/directory/object.csv
  repeated string input_uris = 1;
}

// The GCS location where the output must be written to
message GcsDestination {
  // Required. Google Cloud Storage URI to output directory, up to 2000
  // characters long.
  // Accepted forms:
  // * Prefix path: gs://bucket/directory
  // The requesting user must have write permission to the bucket.
  // The directory is created if it doesn't exist.
  string output_uri_prefix = 1;
}
